Scroll overflow bug fixed.

--- a/styles.css
+++ b/styles.css
@@ -668,7 +668,7 @@ h1::after {
     align-items: center;
     padding: 10px 15px;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-y: auto;
     clip-path: inset(0 50% 0 50%);
     background: rgba(245, 235, 210, 0.65);
     border-radius: 4px;
